# OptimizationLibrary

./: .gitignore  CMakeLists.txt  Makefile  main.c
info/: linearRegression.md
src/: allocation.c  allocation.h  optimization.h  simplex.c  simplex.h
src/linearRegression/: linearRegression.c  linearRegression.h
src/plu/: plu.c  plu.h
src/simplex/: simplex.c  simplex.h  tests.c  tests.h
src/utils/: vector.c  vector.h
